feat(dbaas-logs): archives encryption
ref: OB-4127

Signed-off-by: Pierre Frayer <pfrayer@gmail.com>

--- a/packages/manager/apps/dbaas-logs/package.json
+++ b/packages/manager/apps/dbaas-logs/package.json
@@ -2,7 +2,7 @@
   "name": "@ovh-ux/manager-dbaas-logs-app",
   "version": "1.9.9",
   "private": true,
-  "description": "Cloud Databases standalone application.",
+  "description": "Logs Data Platform standalone application.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ovh/manager.git",
