feat(chakra): add chakra theme and components
Signed-off-by: Zakaria Sahmane <zakaria.sahmane@corp.ovh.com>

--- a/packages/components/ovh-at-internet/tsconfig.json
+++ b/packages/components/ovh-at-internet/tsconfig.json
@@ -14,7 +14,7 @@
     "declaration": true,
     "skipLibCheck": true,
     "isolatedModules": true,
-    "declarationDir": "./dist/types"
+    "declarationDir": "types"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
