--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "flatpickr": "4.6.9"
   },
   "devDependencies": {
+    "@babel/helper-string-parser": "^7.18.10",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-angular": "^17.1.0",
-    "@babel/helper-string-parser": "^7.18.10",
     "@ovh-ux/codename-generator": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
@@ -80,6 +80,7 @@
     "npm-run-all": "^4.1.5",
     "ora": "^3.4.0",
     "p-series": "^2.1.0",
+    "plop": "^3.1.1",
     "prettier": "^1.18.2",
     "progress": "^2.0.3",
     "remark-cli": "^8.0.1",
