--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "npm-run-all": "^4.1.5",
     "ora": "^3.4.0",
     "p-series": "^2.1.0",
+    "plop": "^3.1.1",
     "prettier": "^1.18.2",
     "progress": "^2.0.3",
     "remark-cli": "^8.0.1",
