--- a/packages/manager/apps/pci/package.json
+++ b/packages/manager/apps/pci/package.json
@@ -53,6 +53,7 @@
     "@ovh-ux/ng-ui-router-layout": "^4.1.2",
     "@ovh-ux/request-tagger": "^0.1.1",
     "@ovh-ux/ui-kit": "^6.3.0",
+    "@uirouter/angularjs": "^1.0.23",
     "angular": "^1.7.5",
     "angular-animate": "^1.7.5",
     "angular-cookies": "^1.7.8",
