--- a/packages/manager/core/ovh-themes/package.json
+++ b/packages/manager/core/ovh-themes/package.json
@@ -12,7 +12,8 @@
   ],
   "scripts": {
     "build": "tsc",
-    "dev": "tsc -w"
+    "dev": "tsc",
+    "dev:watch": "tsc -w"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.4",
