--- a/packages/manager/core/ovh-shell/package.json
+++ b/packages/manager/core/ovh-shell/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@ovh-ux/manager-config": "^6.5.2",
+    "@ovh-ux/manager-core-sso": "^0.0.0",
     "@ovh-ux/ovh-at-internet": "^0.3.2",
     "@ovh-ux/ovh-reket": "^1.0.2",
     "@ovh-ux/request-tagger": "^0.1.1",
