--- a/packages/manager/apps/email-pro/package.json
+++ b/packages/manager/apps/email-pro/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ovh-ux/manager-emailpro-app",
-  "version": "0.7.3",
+  "version": "0.7.4",
   "private": true,
   "repository": {
     "type": "git",
@@ -20,7 +20,7 @@
   "dependencies": {
     "@ovh-ux/manager-config": "^6.5.1",
     "@ovh-ux/manager-core": "^12.12.7",
-    "@ovh-ux/manager-emailpro": "^2.0.0 || ^3.0.0",
+    "@ovh-ux/manager-emailpro": "^3.3.1",
     "@ovh-ux/manager-ng-layout-helpers": "^2.6.1",
     "@ovh-ux/ng-ovh-api-wrappers": "^5.0.0",
     "@ovh-ux/ng-ovh-export-csv": "^2.0.5",
