--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,6 @@
 {
   "*.html": [
-    "htmlhint --ignore \"**/dist/**,**/dist-EU/**,**/dist-CA/**,**/dist-US/**\" \"packages/**/*.html\"",
+    "htmlhint --ignore \"**/dist/**\" \"packages/**/*.html\"",
     "prettier --write"
   ],
   "*.js": ["eslint --fix"],
