--- a/packages/manager/core/application/package.json
+++ b/packages/manager/core/application/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ovh-ux/manager-react-core-application",
   "version": "0.0.0",
+  "private": true,
   "description": "",
   "license": "BSD-3-Clause",
   "author": "OVH SAS",
