--- a/packages/manager/apps/container/package.json
+++ b/packages/manager/apps/container/package.json
@@ -60,6 +60,7 @@
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.3.2",
+    "react-tooltip": "^5.4.0",
     "react-use": "^17.4.0"
   },
   "devDependencies": {
