--- a/packages/manager/apps/web/package.json
+++ b/packages/manager/apps/web/package.json
@@ -35,6 +35,7 @@
     "@ovh-ux/manager-office": "^2.8.2",
     "@ovh-ux/manager-phone-prefix": "^1.0.2",
     "@ovh-ux/manager-product-offers": "^5.3.1",
+    "@ovh-ux/manager-server-sidebar": "^3.29.0",
     "@ovh-ux/manager-sharepoint": "^1.0.0 || ^2.0.0",
     "@ovh-ux/manager-web-paas": "^1.6.1",
     "@ovh-ux/ng-at-internet": "^5.9.5",
