--- a/packages/manager/apps/telecom/package.json
+++ b/packages/manager/apps/telecom/package.json
@@ -32,6 +32,7 @@
     "@ovh-ux/manager-models": "^1.14.2",
     "@ovh-ux/manager-ng-layout-helpers": "^2.6.1",
     "@ovh-ux/manager-overthebox": "^6.9.1",
+    "@ovh-ux/manager-server-sidebar": "^3.29.0",
     "@ovh-ux/manager-sms": "^8.11.0",
     "@ovh-ux/manager-telecom-dashboard": "^6.4.4",
     "@ovh-ux/manager-telecom-styles": "^4.6.0",
@@ -53,6 +54,7 @@
     "@ovh-ux/ng-ovh-proxy-request": "^2.0.5",
     "@ovh-ux/ng-ovh-request-tagger": "^1.1.7",
     "@ovh-ux/ng-ovh-responsive-popover": "^6.0.1",
+    "@ovh-ux/ng-ovh-sidebar-menu": "^10.3.1",
     "@ovh-ux/ng-ovh-simple-country-list": "^2.0.5",
     "@ovh-ux/ng-ovh-sso-auth": "^4.6.3",
     "@ovh-ux/ng-ovh-swimming-poll": "^5.0.6",
