--- a/packages/components/ng-at-internet/package.json
+++ b/packages/components/ng-at-internet/package.json
@@ -35,8 +35,7 @@
     "start:watch": "lerna exec --stream --parallel --scope='@ovh-ux/ng-at-internet' --include-dependencies -- yarn run dev:watch"
   },
   "dependencies": {
-    "@ovh-ux/ovh-at-internet": "^0.3.3",
-    "lodash-es": "^4.17.15"
+    "@ovh-ux/ovh-at-internet": "^0.3.3"
   },
   "devDependencies": {
     "@ovh-ux/component-rollup-config": "^12.0.2"
