--- a/packages/components/ng-shell-tracking/package.json
+++ b/packages/components/ng-shell-tracking/package.json
@@ -36,8 +36,7 @@
     "start:watch": "lerna exec --stream --parallel --scope='@ovh-ux/ng-shell-tracking' --include-dependencies -- yarn run dev:watch"
   },
   "dependencies": {
-    "@ovh-ux/ovh-at-internet": "^0.3.3",
-    "lodash-es": "^4.17.15"
+    "@ovh-ux/ovh-at-internet": "^0.3.3"
   },
   "devDependencies": {
     "@ovh-ux/component-rollup-config": "^10.0.0 || ^11.0.0"
