ci(workflows): update all actions
* actions/checkout - https://github.com/actions/checkout/releases
* actions/labeler - https://github.com/actions/labeler/releases
* actions/setup-node@v3 - https://github.com/actions/setup-node/releases
* actions/stale - https://github.com/actions/stale/releases
* olivernybroe/action-conflict-finder
* TimonVS/pr-labeler-action - https://github.com/TimonVS/pr-labeler-action/releases

Signed-off-by: Antoine Leblanc <antoine.leblanc@ovhcloud.com>

--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -6,10 +6,10 @@ jobs:
   label:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/labeler@main
+    - uses: actions/labeler@v4
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
-    - uses: TimonVS/pr-labeler-action@v3
+    - uses: TimonVS/pr-labeler-action@v4
       with:
         configuration-path: .github/branch-name-labeler.yml
       env:
