--- a/.github/workflows/run-bdd-tests.yml
+++ b/.github/workflows/run-bdd-tests.yml
@@ -6,11 +6,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout latest code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Use Node.js 16.x
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: 16
       - name: Restore/create node_modules cache
         uses: actions/cache@v3
         with:
