--- a/packages/manager/apps/dedicated/package.json
+++ b/packages/manager/apps/dedicated/package.json
@@ -89,6 +89,7 @@
     "@ovh-ux/request-tagger": "^0.1.1",
     "@ovh-ux/shell": "^1.8.2",
     "@ovh-ux/ui-kit": "^6.3.0",
+    "@ovh-ux/sign-up": "^2.5.4",
     "@uirouter/angularjs": "^1.0.23",
     "angular": "1.7.x",
     "angular-aria": "1.7.x",
