--- a/packages/manager/apps/dedicated/package.json
+++ b/packages/manager/apps/dedicated/package.json
@@ -39,6 +39,7 @@
     "@ovh-ux/manager-error-page": "^2.3.2",
     "@ovh-ux/manager-exchange": "^2.0.0 || ^3.0.0",
     "@ovh-ux/manager-filters": "^1.1.1",
+    "@ovh-ux/manager-iam": "^1.0.0",
     "@ovh-ux/manager-iplb": "^1.5.0",
     "@ovh-ux/manager-metrics": "^1.4.0",
     "@ovh-ux/manager-models": "^1.14.4",
