--- a/packages/manager/apps/iam/package.json
+++ b/packages/manager/apps/iam/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@ovh-ux/manager-core": "^12.12.9",
     "@ovh-ux/manager-iam": "^1.0.0",
+    "@ovh-ux/ng-ovh-feature-flipping": "^1.0.7",
     "@ovh-ux/request-tagger": "^0.1.1",
     "@uirouter/angularjs": "^1.0.23",
     "angular": "^1.7.5",
