--- a/packages/manager/modules/iam/package.json
+++ b/packages/manager/modules/iam/package.json
@@ -12,6 +12,7 @@
   "author": "OVH SAS",
   "main": "./src/index.js",
   "peerDependencies": {
+    "@ovh-ux/ng-ovh-feature-flipping": "^1.0.7",
     "@uirouter/angularjs": "^1.0.23",
     "angular": "^1.7.5",
     "angular-translate": "^2.18.1"
