fix(): update branch with 10886
ref: MANAGER-10890

Signed-off-by: Alex Boungnaseng <alex.boungnaseng.ext@corp.ovh.com>

--- a/packages/manager/apps/nasha-react-app/package.json
+++ b/packages/manager/apps/nasha-react-app/package.json
@@ -18,6 +18,7 @@
     "start:watch": "lerna exec --stream --parallel --scope='@ovh-ux/manager-nasha-react-app-app' --include-dependencies -- npm run dev:watch --if-present"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.2.4",
     "@ovh-ux/manager-core-api": "*",
     "@ovh-ux/manager-react-breadcrumb": "*",
     "@ovh-ux/manager-react-core-application": "*",
