feat(*): update .lintstagerc.json
ref: MANAGER-10890

Signed-off-by: Alex Boungnaseng <alex.boungnaseng.ext@corp.ovh.com>

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -3,6 +3,10 @@
     "htmlhint --ignore \"**/dist/**\" \"packages/**/*.html\"",
     "prettier --write"
   ],
+  "*.{tsx,ts}": [
+    "eslint --fix \"packages/manager/apps/**/*.{tsx,ts}\"",
+    "prettier --write \"packages/manager/apps/**/*.{tsx,ts}\""
+  ],
   "*.js": ["eslint --fix"],
   "*.{css,less,scss}": ["stylelint --fix"],
   "!(*CHANGELOG).md": ["remark -qf .", "eslint --ext .md --fix"],
