--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "clean:dist": "rimraf \"packages/**/dist\"",
     "format": "run-p format:*",
     "format:css": "yarn run lint:css --fix",
-    "format:html": "yarn run lint:html && prettier --parser=html --write \"packages/manager/apps/**/*.html\"",
-    "format:tsx": "yarn run lint:tsx",
+    "format:html": "yarn run lint:html && prettier --parser=html --write \"packages/**/*.html\"",
+    "format:tsx": "yarn run lint:tsx && prettier --write \"packages/manager/apps/**/*.{tsx,ts}\"",
     "format:js": "yarn run lint:js --fix",
     "format:md": "yarn run lint:md --fix",
     "generate:app": "sao ./packages/manager/tools/sao-ovh-manager-app",
