feat(): add eslint and prettier on ts and tsx file
ref: MANAGER-10890

Signed-off-by: Alex Boungnaseng <alex.boungnaseng.ext@corp.ovh.com>

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "clean:dist": "rimraf \"packages/**/dist\"",
     "format": "run-p format:*",
     "format:css": "yarn run lint:css --fix",
-    "format:html": "yarn run lint:html && prettier --parser=html --write \"packages/**/*.html\"",
+    "format:html": "yarn run lint:html --fix && prettier --parser=html --write \"packages/**/*.html\"",
+    "format:tsx": "yarn run lint:tsx && prettier --write \"packages/manager/apps/nasha-react/**/*.{tsx,ts}\"",
     "format:js": "yarn run lint:js --fix",
     "format:md": "yarn run lint:md --fix",
     "generate:app": "sao ./packages/manager/tools/sao-ovh-manager-app",
@@ -29,6 +30,7 @@
     "lint": "run-p lint:*",
     "lint:css": "stylelint \"packages/**/*.{css,less,scss}\"",
     "lint:html": "htmlhint --ignore \"**/dist/**\" \"packages/**/*.html\"",
+    "lint:tsx": "eslint \"packages/manager/apps/nasha-react/**/*.{tsx,ts}\"",
     "lint:js": "eslint --cache --quiet --format=pretty \"packages\" \"scripts\"",
     "lint:md": "remark -qf . && eslint --quiet --format=pretty --ext .md \"docs\" \"packages\"",
     "list-dependents": "node scripts/list-dependents.js",
