--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -3,6 +3,10 @@
     "htmlhint --ignore \"**/dist/**\" \"packages/**/*.html\"",
     "prettier --write"
   ],
+  "*.{tsx,ts}": [
+    "eslint --fix \"packages/manager/apps/nasha-react/**/*.{tsx,ts}\"",
+    "prettier --write \"packages/manager/apps/nasha-react/**/*.{tsx,ts}\""
+  ],
   "*.js": ["eslint --fix"],
   "*.{css,less,scss}": ["stylelint --fix"],
   "!(*CHANGELOG).md": ["remark -qf .", "eslint --ext .md --fix"],
