--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -15,6 +15,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
       - name: Restore/create node_modules cache
         uses: actions/cache@v3
         with:
