feat(iam): add policies section
MANAGER-10394

Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 node_modules
 dist
 types
+!/packages/manager/modules/iam/**/types
 .memsourcerc.yaml
 /docs/docs/.vuepress/public/assets/json/packages.json
 .extras*
