--- a/packages/manager/apps/anthos/package.json
+++ b/packages/manager/apps/anthos/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@ovh-ux/manager-hub-app",
-  "version": "3.26.4",
+  "name": "@ovh-ux/manager-anthos-app",
+  "version": "1.4.10",
   "private": true,
-  "description": "OVHcloud Dashboard control panel.",
+  "description": "OVHcloud Anthos app",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ovh/manager.git",
-    "directory": "packages/manager/apps/hub"
+    "directory": "packages/manager/apps/anthos"
   },
   "license": "BSD-3-Clause",
   "author": "OVH SAS",
@@ -14,46 +14,37 @@
     "build": "webpack --env.production",
     "dev": "webpack-dev-server",
     "dev:watch": "yarn run dev",
-    "start": "lerna exec --stream --scope='@ovh-ux/manager-hub-app' --include-dependencies -- npm run build --if-present",
-    "start:dev": "lerna exec --stream --scope='@ovh-ux/manager-hub-app' --include-dependencies -- npm run dev --if-present",
-    "start:watch": "lerna exec --stream --parallel --scope='@ovh-ux/manager-hub-app' --include-dependencies -- npm run dev:watch --if-present"
+    "start": "lerna exec --stream --scope='@ovh-ux/manager-anthos-app' --include-dependencies -- npm run build --if-present",
+    "start:dev": "lerna exec --stream --scope='@ovh-ux/manager-anthos-app' --include-dependencies -- npm run dev --if-present",
+    "start:watch": "lerna exec --stream --parallel --scope='@ovh-ux/manager-anthos-app' --include-dependencies -- npm run dev:watch --if-present"
   },
   "dependencies": {
-    "@ovh-ux/manager-at-internet-configuration": "^1.5.0",
-    "@ovh-ux/manager-banner": "^1.2.15",
+    "@ovh-ux/manager-anthos": "^1.3.1",
     "@ovh-ux/manager-billing-components": "^3.11.5",
     "@ovh-ux/manager-config": "^6.6.0",
     "@ovh-ux/manager-core": "^12.12.10",
     "@ovh-ux/manager-error-page": "^2.3.2",
-    "@ovh-ux/manager-hub": "^3.7.0",
-    "@ovh-ux/manager-models": "^1.14.4",
     "@ovh-ux/manager-ng-layout-helpers": "^2.6.2",
-    "@ovh-ux/manager-trusted-nic": "^0.0.0 || ^1.0.0",
     "@ovh-ux/ng-at-internet": "^5.10.0",
     "@ovh-ux/ng-at-internet-ui-router-plugin": "^3.2.3",
     "@ovh-ux/ng-ovh-api-wrappers": "^5.1.0",
     "@ovh-ux/ng-ovh-contracts": "^4.2.3",
+    "@ovh-ux/ng-ovh-doc-url": "^2.0.6",
     "@ovh-ux/ng-ovh-feature-flipping": "^1.0.7",
     "@ovh-ux/ng-ovh-http": "^5.0.6",
-    "@ovh-ux/ng-ovh-order-tracking": "^2.2.2",
-    "@ovh-ux/ng-ovh-payment-method": "^9.5.2",
-    "@ovh-ux/ng-ovh-proxy-request": "^2.0.6",
+    "@ovh-ux/ng-ovh-payment-method": "^9.4.1",
     "@ovh-ux/ng-ovh-request-tagger": "^1.1.8",
     "@ovh-ux/ng-ovh-sso-auth": "^4.6.4",
     "@ovh-ux/ng-ovh-swimming-poll": "^5.0.7",
-    "@ovh-ux/ng-ovh-user-pref": "^2.0.6",
-    "@ovh-ux/ng-shell-tracking": "^0.2.0",
+    "@ovh-ux/ng-ovh-utils": "^14.0.19",
     "@ovh-ux/ng-translate-async-loader": "^2.1.6",
     "@ovh-ux/ng-ui-router-breadcrumb": "^1.1.8",
-    "@ovh-ux/ng-ui-router-layout": "^4.1.2",
     "@ovh-ux/request-tagger": "^0.1.1",
-    "@ovh-ux/shell": "^1.10.0",
     "@ovh-ux/ui-kit": "^6.4.2",
-    "@ovh-ux/url-builder": "^1.1.1",
     "@uirouter/angularjs": "^1.0.23",
     "angular": "^1.7.5",
-    "angular-animate": "^1.7.5",
     "angular-aria": "^1.7.8",
+    "angular-chart.js": "^1.1.1",
     "angular-cookies": "^1.7.8",
     "angular-dynamic-locale": "^0.1.37",
     "angular-i18n": "^1.7.8",
@@ -61,21 +52,16 @@
     "angular-sanitize": "^1.7.8",
     "angular-translate": "^2.18.1",
     "angular-translate-loader-pluggable": "^1.3.1",
-    "angular-ui-bootstrap": "1.3.3",
-    "bloodhound-js": "^1.2.3",
-    "bootstrap": "^4.4.1",
-    "clipboard": "^2.0.4",
+    "bootstrap": "~3.3.7",
+    "bootstrap4": "twbs/bootstrap#v4.0.0",
+    "chart.js": "chartjs/Chart.js#^2.0",
     "core-js": "^3.6.5",
-    "flatpickr": "^4.6.3",
+    "flatpickr": "~4.5.2",
     "jquery": "^2.1.3",
     "lodash-es": "^4.17.15",
     "moment": "^2.24.0",
     "oclazyload": "^1.1.0",
-    "ovh-api-services": "^17.0.0",
-    "ovh-ui-kit-bs": "^4.2.0",
-    "popper.js": "^1.16.1",
-    "regenerator-runtime": "^0.13.7",
-    "ui-select": "^0.19.8",
+    "ovh-api-services": "^16.0.0",
     "whatwg-fetch": "^3.5.0"
   },
   "devDependencies": {
@@ -86,7 +72,6 @@
   },
   "regions": [
     "CA",
-    "EU",
-    "US"
+    "EU"
   ]
 }
