--- a/packages/manager/modules/iam/package.json
+++ b/packages/manager/modules/iam/package.json
@@ -13,8 +13,13 @@
   "main": "./src/index.js",
   "peerDependencies": {
     "@ovh-ux/ng-ovh-feature-flipping": "^1.0.7",
+    "@ovh-ux/ng-ovh-utils": "^14.0.19",
+    "@ovh-ux/ng-ui-router-breadcrumb": "^1.1.8",
+    "@ovh-ux/ui-kit": "^6.4.0",
     "@uirouter/angularjs": "^1.0.23",
     "angular": "^1.7.5",
-    "angular-translate": "^2.18.1"
+    "angular-translate": "^2.18.1",
+    "lodash-es": "^4.17.15",
+    "ovh-ui-kit-bs": "^4.2.0"
   }
 }
