--- a/packages/manager/apps/dedicated/package.json
+++ b/packages/manager/apps/dedicated/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ovh-ux/manager-dedicated",
-  "version": "17.50.0",
+  "version": "17.51.0",
   "private": true,
   "description": "OVHcloud Dedicated control panel.",
   "repository": {
@@ -29,15 +29,15 @@
     "@ovh-ux/manager-billing-components": "^3.11.5",
     "@ovh-ux/manager-bm-server-components": "^1.6.0",
     "@ovh-ux/manager-catalog-price": "^1.7.0",
-    "@ovh-ux/manager-cda": "^1.5.0",
-    "@ovh-ux/manager-cloud-connect": "^1.0.0",
+    "@ovh-ux/manager-cda": "^1.6.0",
+    "@ovh-ux/manager-cloud-connect": "^1.9.0",
     "@ovh-ux/manager-cloud-styles": "^1.5.1",
     "@ovh-ux/manager-components": "^1.0.0",
     "@ovh-ux/manager-config": "^6.6.0",
     "@ovh-ux/manager-core": "^12.12.10",
-    "@ovh-ux/manager-dbaas-logs": "^1.10.2",
+    "@ovh-ux/manager-dbaas-logs": "^1.11.0",
     "@ovh-ux/manager-error-page": "^2.3.2",
-    "@ovh-ux/manager-exchange": "^2.0.0 || ^3.0.0",
+    "@ovh-ux/manager-exchange": "^3.7.0",
     "@ovh-ux/manager-filters": "^1.1.1",
     "@ovh-ux/manager-iplb": "^1.5.0",
     "@ovh-ux/manager-metrics": "^1.4.0",
@@ -45,13 +45,13 @@
     "@ovh-ux/manager-nasha": "^2.7.0",
     "@ovh-ux/manager-netapp": "^1.5.1",
     "@ovh-ux/manager-ng-layout-helpers": "^2.6.2",
-    "@ovh-ux/manager-nutanix": "^1.5.5",
+    "@ovh-ux/manager-nutanix": "^1.6.0",
     "@ovh-ux/manager-support": "^1.17.2",
     "@ovh-ux/manager-trusted-nic": "^0.0.0 || ^1.0.0",
-    "@ovh-ux/manager-veeam-cloud-connect": "^1.0.0 || ^2.0.0",
-    "@ovh-ux/manager-veeam-enterprise": "^0.3.0 || ^1.0.0",
-    "@ovh-ux/manager-vps": "^2.30.1",
-    "@ovh-ux/manager-vrack": "^1.5.3",
+    "@ovh-ux/manager-veeam-cloud-connect": "^2.5.0",
+    "@ovh-ux/manager-veeam-enterprise": "^1.6.0",
+    "@ovh-ux/manager-vps": "^2.31.0",
+    "@ovh-ux/manager-vrack": "^1.6.0",
     "@ovh-ux/ng-at-internet": "^5.9.6",
     "@ovh-ux/ng-at-internet-ui-router-plugin": "^3.2.3",
     "@ovh-ux/ng-ovh-api-wrappers": "^5.1.0",
