--- a/packages/manager/apps/cloud-connect/package.json
+++ b/packages/manager/apps/cloud-connect/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ovh-ux/manager-cloud-connect-app",
-  "version": "1.7.7",
+  "version": "1.7.8",
   "private": true,
   "description": "OVHcloud Connect standalone application.",
   "repository": {
@@ -19,7 +19,7 @@
     "start:watch": "lerna exec --stream --parallel --scope='@ovh-ux/manager-cloud-connect-app' --include-dependencies -- npm run dev:watch --if-present"
   },
   "dependencies": {
-    "@ovh-ux/manager-cloud-connect": "^0.0.0 || ^1.0.0",
+    "@ovh-ux/manager-cloud-connect": "^1.9.0",
     "@ovh-ux/manager-config": "^6.6.0",
     "@ovh-ux/manager-core": "^12.12.10",
     "@ovh-ux/manager-ng-layout-helpers": "^2.6.2",
