--- a/packages/manager/apps/exchange/package.json
+++ b/packages/manager/apps/exchange/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ovh-ux/manager-exchange-app",
-  "version": "0.7.9",
+  "version": "0.7.10",
   "private": true,
   "repository": {
     "type": "git",
@@ -21,7 +21,7 @@
     "@ovh-ux/manager-advices": "^1.6.2",
     "@ovh-ux/manager-config": "^6.6.0",
     "@ovh-ux/manager-core": "^12.12.10",
-    "@ovh-ux/manager-exchange": "^2.0.0 || ^3.0.0",
+    "@ovh-ux/manager-exchange": "^3.7.0",
     "@ovh-ux/manager-ng-layout-helpers": "^2.6.2",
     "@ovh-ux/ng-at-internet": "^5.9.6",
     "@ovh-ux/ng-ovh-api-wrappers": "^5.1.0",
