build(iam): lazy load IAM
ref: MANAGER-10394
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/modules/iam/package.json
+++ b/packages/manager/modules/iam/package.json
@@ -20,6 +20,7 @@
     "angular": "^1.7.5",
     "angular-translate": "^2.18.1",
     "lodash-es": "^4.17.15",
+    "oclazyload": "^1.1.0",
     "ovh-ui-kit-bs": "^4.2.0"
   }
 }
