--- a/packages/manager/apps/iam/package.json
+++ b/packages/manager/apps/iam/package.json
@@ -36,6 +36,7 @@
     "core-js": "^3.6.5",
     "lodash-es": "^4.17.15",
     "moment": "^2.24.0",
+    "oclazyload": "^1.1.0",
     "ovh-ui-kit-bs": "^4.2.0",
     "regenerator-runtime": "^0.13.7",
     "whatwg-fetch": "^3.5.0"
