feat(iam): update app packages
ref: MANAGER-10394
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/apps/iam/package.json
+++ b/packages/manager/apps/iam/package.json
@@ -22,13 +22,22 @@
     "@ovh-ux/manager-core": "^12.12.9",
     "@ovh-ux/manager-iam": "^1.0.0",
     "@ovh-ux/ng-ovh-feature-flipping": "^1.0.7",
+    "@ovh-ux/ng-ovh-http": "^5.0.4",
+    "@ovh-ux/ng-ovh-request-tagger": "^1.1.0",
+    "@ovh-ux/ng-ovh-sso-auth": "^4.6.2",
+    "@ovh-ux/ng-ovh-utils": "^14.0.19",
+    "@ovh-ux/ng-ui-router-breadcrumb": "^1.1.8",
     "@ovh-ux/request-tagger": "^0.1.1",
+    "@ovh-ux/ui-kit": "^6.4.0",
     "@uirouter/angularjs": "^1.0.23",
     "angular": "^1.7.5",
     "angular-translate": "^2.18.1",
     "bootstrap4": "twbs/bootstrap#v4.0.0",
     "core-js": "^3.6.5",
+    "lodash-es": "^4.17.15",
     "moment": "^2.24.0",
+    "oclazyload": "^1.1.0",
+    "ovh-ui-kit-bs": "^4.2.0",
     "regenerator-runtime": "^0.13.7",
     "whatwg-fetch": "^3.5.0"
   },
