--- a/packages/manager/apps/sign-up/package.json
+++ b/packages/manager/apps/sign-up/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ovh-ux/sign-up-app",
-  "version": "2.7.7",
+  "version": "2.8.0",
   "private": true,
   "description": "Sign-up form application.",
   "repository": {
@@ -20,11 +20,11 @@
     "start:watch": "lerna exec --stream --parallel --scope='@ovh-ux/sign-up-app' --include-dependencies -- npm run dev:watch --if-present"
   },
   "dependencies": {
-    "@ovh-ux/manager-at-internet-configuration": "^1.0.0 || ^2.0.0",
+    "@ovh-ux/manager-at-internet-configuration": "^1.5.0",
     "@ovh-ux/manager-config": "^6.6.0",
     "@ovh-ux/manager-cookie-policy": "^0.0.0 || ^1.0.0",
     "@ovh-ux/manager-core": "^12.12.10",
-    "@ovh-ux/ng-at-internet": "^5.9.6",
+    "@ovh-ux/ng-at-internet": "^5.10.0",
     "@ovh-ux/ng-at-internet-ui-router-plugin": "^3.2.3",
     "@ovh-ux/ng-ovh-http": "^5.0.6",
     "@ovh-ux/ng-ovh-request-tagger": "^1.1.8",
