--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -8,15 +8,16 @@
 /packages/manager/apps/ @ovh/team-manager-dev
 
 # Core
-/packages/manager/core/ @ovh/team-manager-core
+/packages/manager/core/ @ovh/su-digital-tools-core-stack
 
 # Modules
 /packages/manager/modules/ @ovh/team-manager-dev
 
 # Build / Tooling
-/packages/manager/tools/ @ovh/team-manager-core @ovh/team-manager-continuous-integration
+/packages/manager/tools/ @ovh/su-digital-tools-core-stack @ovh/su-digital-tools-core-service-delivery
 
-# Continuous Integration
-.nvmrc @ovh/team-manager-continuous-integration
-/scripts/ @ovh/team-manager-continuous-integration
-.github @ovh/team-manager-continuous-integration
+# Continuous Integration and scripts
+.github @ovh/su-digital-tools-core-service-delivery
+.nvmrc @ovh/su-digital-tools-core-service-delivery
+/scripts/ @ovh/su-digital-tools-core-service-delivery
+/scripts/start-application.js @ovh/team-manager-dev
