--- a/packages/manager/modules/iam/package.json
+++ b/packages/manager/modules/iam/package.json
@@ -10,7 +10,20 @@
   },
   "license": "BSD-3-Clause",
   "author": "OVH SAS",
-  "main": "./src/index.js",
+  "main": "./dist/esm/index.js",
+  "scripts": {
+    "build": "rollup -c --environment BUILD:production",
+    "dev": "rollup -c --environment BUILD:development",
+    "dev:watch": "yarn run dev --watch",
+    "prepare": "yarn run build",
+    "start": "lerna exec --stream --scope='@ovh-ux/manager-iam' --include-dependencies -- yarn run build",
+    "start:dev": "lerna exec --stream --scope='@ovh-ux/manager-iam' --include-dependencies -- yarn run dev",
+    "start:watch": "lerna exec --stream --parallel --scope='@ovh-ux/manager-iam' --include-dependencies -- yarn run dev:watch"
+  },
+  "devDependencies": {
+    "@ovh-ux/component-rollup-config": "^12.0.2",
+    "@rollup/plugin-alias": "^4.0.3"
+  },
   "peerDependencies": {
     "@ovh-ux/ng-ovh-feature-flipping": "^1.0.7",
     "@ovh-ux/ng-ovh-utils": "^14.0.19",
@@ -22,12 +35,5 @@
     "lodash-es": "^4.17.15",
     "oclazyload": "^1.1.0",
     "ovh-ui-kit-bs": "^4.2.0"
-  },
-  "resolveAlias": {
-    "@iam/components": "./src/components",
-    "@iam/constants": "./src/constants",
-    "@iam/resolves": "./src/resolves",
-    "@iam/routes": "./src/routes",
-    "@iam/services": "./src/services"
   }
 }
