--- a/packages/manager/apps/nasha-react/package.json
+++ b/packages/manager/apps/nasha-react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ovh-ux/manager-nasha-react-app",
   "version": "0.0.0",
-  "private": "true",
+  "private": true,
   "description": "nash react app",
   "repository": {
     "type": "git",
