fix(pci.data-processing): removing unwanted change
datatr-61

Signed-off-by: Gael Leblan <gael.leblan@ovhcloud.com>

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -7,6 +7,5 @@
   "*.{css,less,scss}": ["stylelint --fix"],
   "!(*CHANGELOG).md": ["remark -qf .", "eslint --ext .md --fix"],
   "**/package.json": ["npx sort-package-json"],
-  "*.json": ["prettier --write"],
-  "*.sh": ["make test"]
+  "*.json": ["prettier --write"]
 }
