--- a/lerna.json
+++ b/lerna.json
@@ -6,8 +6,7 @@
     "packages/manager/apps/*",
     "packages/manager/core/*",
     "packages/manager/modules/*",
-    "packages/manager/tools/*",
-    "packages/manager/components/react/*"
+    "packages/manager/tools/*"
   ],
   "npmClient": "yarn",
   "useWorkspaces": true,
