--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "packages/manager/apps/*",
     "packages/manager/core/*",
     "packages/manager/modules/*",
-    "packages/manager/tools/*",
-    "packages/manager/components/react/*"
+    "packages/manager/tools/*"
   ],
   "scripts": {
     "build": "yarn run build:turbo",
