--- a/packages/manager/core/generator/package.json
+++ b/packages/manager/core/generator/package.json
@@ -13,8 +13,9 @@
     "start": "plop"
   },
   "dependencies": {
-    "fuzzy": "^0.1.3",
+    "axios": "^1.1.2",
     "inquirer-autocomplete-prompt": "^3.0.0",
+    "minimist": "^1.2.8",
     "plop": "^3.1.1"
   },
   "preferGlobal": true
