--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lint": "run-p lint:*",
     "lint:css": "stylelint \"packages/**/*.{css,less,scss}\"",
     "lint:html": "htmlhint --ignore \"**/dist/**\" \"packages/**/*.html\"",
-    "lint:tsx": "eslint \"packages/manager/apps/**/*.{tsx,ts}\"",
+    "lint:tsx": "eslint --quiet \"packages/manager/apps/**/*.{tsx,ts,md}\"",
     "lint:js": "eslint --cache --quiet --format=pretty \"packages\" \"scripts\"",
     "lint:md": "remark -qf . && eslint --quiet --format=pretty --ext .md \"docs\" \"packages\"",
     "list-dependents": "node scripts/list-dependents.js",
