--- a/packages/manager/core/application/package.json
+++ b/packages/manager/core/application/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "@ovh-ux/manager-config": "^6.0.0",
     "@ovh-ux/shell": "^1.0.0",
-    "@tanstack/react-query": "^4.9.0",
+    "@tanstack/react-query": "^4.29.3",
+    "@tanstack/react-query-devtools": "^4.29.3",
     "generouted": "^1.6.4",
     "i18next": "^20.4.0",
     "i18next-http-backend": "^1.3.0",
