feat: add cypress and configure e2e testing
ref: MANAGER-11308

Signed-off-by: Nicolas Pierre-charles <nicolas@nicode.fr>

--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "start": "node -r esm scripts/start-application.js",
     "test:jest": "jest --runInBand",
     "test": "yarn lint",
-    "test:scripts": "make test"
+    "test:scripts": "make test",
+    "test:cypress:dev": "cypress open",
+    "test:cypress:run": "lerna run test:e2e --concurrency 1"
   },
   "resolutions": {
     "flatpickr": "4.6.9"
@@ -58,6 +60,7 @@
     "commander": "^6.0.0",
     "concurrently": "^7.2.2",
     "conventional-changelog-cli": "^2.0.25",
+    "cypress": "^12.11.0",
     "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.3.0",
