--- a/packages/manager/apps/nasha-react/package.json
+++ b/packages/manager/apps/nasha-react/package.json
@@ -22,6 +22,7 @@
     "@ovh-ux/manager-core-api": "*",
     "@ovh-ux/manager-react-breadcrumb": "*",
     "@ovh-ux/manager-react-core-application": "*",
+    "@ovh-ux/shell": "^1.9.0",
     "@tanstack/react-query": "^4.9.0",
     "@tanstack/react-query-devtools": "^4.9.0",
     "react": "^18.2.0",
