feat(dedicated.nasha): defining ShellClient type
ref: MANAGER-11287

--- a/packages/manager/apps/nasha-react/package.json
+++ b/packages/manager/apps/nasha-react/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.2.4",
+    "@ovh-ux/manager-config": "^6.6.0",
     "@ovh-ux/manager-core-api": "*",
     "@ovh-ux/manager-react-breadcrumb": "*",
     "@ovh-ux/manager-react-core-application": "*",
