feat(nasha.react): add template on dashboard
ref:MANAGER-11381

Signed-off-by: stif59100 <steeve.vanderstocken@ovhcloud.com>

--- a/packages/manager/apps/cdn-react/package.json
+++ b/packages/manager/apps/cdn-react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ovh-ux/manager-cdn-react-app",
   "version": "0.0.0",
-  "private": "true",
+  "private": true,
   "description": "",
   "repository": {
     "type": "git",
