--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -4,7 +4,7 @@
     "prettier --write"
   ],
   "*.{tsx,ts}": [
-    "eslint --fix \"packages/manager/apps/**/*.{tsx,ts}\"",
+    "eslint --fix \"packages/manager/apps/**/*.{tsx,ts,md}\"",
     "prettier --write \"packages/manager/apps/**/*.{tsx,ts}\""
   ],
   "*.js": ["eslint --fix"],
