--- a/packages/manager/apps/nasha-react/package.json
+++ b/packages/manager/apps/nasha-react/package.json
@@ -24,6 +24,10 @@
     "@ovh-ux/manager-react-breadcrumb": "*",
     "@ovh-ux/manager-react-core-application": "*",
     "@ovh-ux/shell": "^1.9.0",
+    "@ovhcloud/ods-core": "^12.1.0",
+    "@ovhcloud/ods-stencil": "^12.1.0",
+    "@ovhcloud/ods-theme-blue-jeans": "^12.1.0",
+    "@ovhcloud/ods-theming": "^12.1.0",
     "@tanstack/react-query": "^4.9.0",
     "@tanstack/react-query-devtools": "^4.9.0",
     "react": "^18.2.0",
