--- a/packages/manager/apps/iam/package.json
+++ b/packages/manager/apps/iam/package.json
@@ -39,6 +39,7 @@
     "moment": "^2.24.0",
     "oclazyload": "^1.1.0",
     "ovh-ui-kit-bs": "^4.2.0",
+    "punycode": "^1.4.1",
     "regenerator-runtime": "^0.13.7",
     "whatwg-fetch": "^3.5.0"
   },
