feat(tracking): add tracking ovh
ref: MANAGER-11442

Signed-off-by: Alex Boungnaseng <alex.boungnaseng.ext@corp.ovh.com>

--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "turbo": "^1.4.3",
     "whatwg-fetch": "^3.6.2"
   },
+  "packageManager": "yarn@1.22.19",
   "engines": {
     "node": "^16",
     "yarn": ">=1.21.1"
