feat(generator): add tracking on ods components
ref: MANAGER-11442

Signed-off-by: Alex Boungnaseng <alex.boungnaseng.ext@corp.ovh.com>

--- a/.eslintignore
+++ b/.eslintignore
@@ -6,3 +6,4 @@ packages/manager/apps/container
 packages/manager/core/generator/app/templates
 packages/components/ovh-shell
 packages/manager/core/generator
+packages/components/ovh-at-internet/src/ovh-at-internet.ts
