--- a/.eslintignore
+++ b/.eslintignore
@@ -5,4 +5,4 @@ packages/manager/tools/sao-ovh-manager-app/template
 packages/manager/core/generator/app/templates
 packages/components/ovh-shell
 packages/manager/core/generator
-packages/manager/apps/container
+packages/components/ovh-at-internet/src/ovh-at-internet.ts
