feat(dedicated.carbon): add main page for carbon footprint billing
ref: MANAGER-11511

Signed-off-by: David Arsène <david.arsene.ext@ovhcloud.com>

--- a/packages/manager/modules/carbon-calculator/package.json
+++ b/packages/manager/modules/carbon-calculator/package.json
@@ -17,11 +17,14 @@
   "peerDependencies": {
     "@ovh-ux/manager-core": "^10.0.0 || ^11.0.0",
     "@ovh-ux/manager-ng-layout-helpers": "^2.0.0",
-    "@ovh-ux/ng-ui-router-breadcrumb": "^1.0.0",
-    "@ovh-ux/ui-kit": "^4.4.3",
+    "@ovh-ux/ng-ovh-feature-flipping": "^1.0.7",
+    "@ovh-ux/ng-ui-router-breadcrumb": "^1.1.8",
+    "@ovh-ux/ui-kit": "^6.1.0",
     "@uirouter/angularjs": "^1.0.23",
     "angular": "^1.7.5",
     "angular-translate": "^2.18.1",
+    "font-awesome": "4.7.0",
+    "moment": "^2.24.0",
     "oclazyload": "^1.1.0"
   }
 }
