fix(generator): add template dashboard listing onboarding
ref: MANAGER-11537

Signed-off-by: Alex Boungnaseng <alex.boungnaseng.ext@corp.ovh.com>

--- a/.eslintignore
+++ b/.eslintignore
@@ -5,3 +5,6 @@ packages/manager/tools/sao-ovh-manager-app/template
 packages/manager/apps/container
 packages/manager/core/generator/app/templates
 packages/components/ovh-shell
+packages/manager/core/generator
+packages/manager/apps/container
+packages/manager/core/generator/app/templates
