feat: super-components workspace and msc-tile super-component
ref: MANAGER-11577

Signed-off-by: Nicolas Pierre-charles <nicolas@nicode.fr>

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,6 @@
 {
   "*.html": [
-    "htmlhint --ignore \"**/dist/**\" \"packages/**/*.html\"",
+    "htmlhint --ignore \"**/dist/**,**/www/**,**/screenshot/**\" \"packages/**/*.html\"",
     "prettier --write"
   ],
   "*.{tsx,ts}": [
