--- a/.eslintignore
+++ b/.eslintignore
@@ -5,3 +5,6 @@ packages/manager/tools/sao-ovh-manager-app/template
 packages/manager/apps/container
 packages/manager/core/generator/app/templates
 packages/components/ovh-shell
+www
+screenshot
+loader
