--- a/packages/manager/apps/carbon-calculator/package.json
+++ b/packages/manager/apps/carbon-calculator/package.json
@@ -25,6 +25,7 @@
     "@ovh-ux/manager-error-page": "^2.3.1",
     "@ovh-ux/manager-ng-layout-helpers": "^2.6.1",
     "@ovh-ux/ng-ovh-api-wrappers": "^5.0.0",
+    "@ovh-ux/ng-ovh-feature-flipping": "^1.0.7",
     "@ovh-ux/ng-ovh-http": "^5.0.0",
     "@ovh-ux/ng-ovh-request-tagger": "^1.1.7",
     "@ovh-ux/ng-ovh-sso-auth": "^4.6.3",
