feat: super-component generator
ref: MANAGER-11578

Signed-off-by: Nicolas Pierre-charles <nicolas@nicode.fr>

--- a/packages/super-components/.eslintrc
+++ b/packages/super-components/.eslintrc
@@ -30,7 +30,8 @@
     "**/custom-elements-bundle/**",
     "**/react/src/**",
     "**/vue/src/**",
-    "**/loader/**"
+    "**/loader/**",
+    "**/templates/**"
   ],
   "overrides": [
     {
