--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
     "format:css": "yarn run lint:css --fix",
     "format:html": "yarn run lint:html && prettier --parser=html --write \"packages/**/*.html\"",
     "format:js": "yarn run lint:js --fix",
-    "format:tsx": "yarn run lint:tsx --fix && prettier --write \"packages/{manager,super-components}/**/*.{tsx,ts}\"",
+    "format:tsx": "yarn run lint:tsx --fix && prettier --write \"packages/{manager/apps,super-components}/**/*.{tsx,ts}\"",
     "format:md": "yarn run lint:md --fix",
     "generate:app": "sao ./packages/manager/tools/sao-ovh-manager-app",
     "generate:uapp": "yarn workspace @ovh-ux/manager-generator run start",
     "generate:module": "sao ./packages/manager/tools/sao-ovh-manager-module",
     "lint": "run-p lint:*",
     "lint:css": "stylelint \"packages/**/*.{css,less,scss}\"",
-    "lint:html": "htmlhint --ignore \"**/dist/**,**/www/**,**/screenshot/**\" \"packages/**/*.html\"",
-    "lint:tsx": "eslint --quiet \"packages/{manager,super-components}/**/*.{tsx,ts}\"",
+    "lint:html": "htmlhint --ignore \"**/dist/**,**/www/**,**/screenshot/**,**/docs-api/**\" \"packages/**/*.html\"",
+    "lint:tsx": "eslint --quiet \"packages/{manager/apps,super-components}/**/*.{tsx,ts}\"",
     "lint:js": "eslint --cache --quiet --format=pretty \"packages\" \"scripts\"",
     "lint:md": "remark -qf . && eslint --quiet --format=pretty --ext .md \"docs\" \"packages\"",
     "list-dependents": "node scripts/list-dependents.js",
@@ -44,13 +44,7 @@
     "test:jest": "jest --runInBand",
     "test": "yarn lint",
     "test:scripts": "make test",
-    "test:playwright:run": "lerna run test:e2e:script --concurrency 1",
-    "msc:build": "lerna run msc:build",
-    "msc:build:prod": "lerna run msc:build:prod",
-    "msc:build:storybook": "yarn msc:build && yarn workspace @ovhcloud/msc-storybook build",
-    "msc:start": "yarn msc:build && yarn workspace @ovhcloud/msc-storybook start",
-    "msc:test": "lerna run msc:test",
-    "msc:test:ci": "yarn msc:test:ci"
+    "test:playwright:run": "lerna run test:e2e:script --concurrency 1"
   },
   "resolutions": {
     "flatpickr": "4.6.9"
