feat: msc-billing super-component
ref: MANAGER-11620

Signed-off-by: Nicolas BAPTISTA <nicolas.baptista.ext@corp.ovh.com>

--- a/packages/super-components/tsconfig.json
+++ b/packages/super-components/tsconfig.json
@@ -9,7 +9,7 @@
     "jsx": "react",
     "jsxFactory": "h",
     "jsxFragmentFactory": "Fragment",
-    "lib": ["dom", "es2018", "esnext.array"],
+    "lib": ["es6", "dom", "es2018", "esnext.array"],
     "module": "esnext",
     "moduleResolution": "node",
     "noImplicitAny": true,
