feat(pci.octavia): clean packages
ref: MANAGER-11186

Signed-off-by: Quentin Pavy <contact@quentinpavy.com>

--- a/packages/manager/modules/octavia-load-balancer/package.json
+++ b/packages/manager/modules/octavia-load-balancer/package.json
@@ -22,7 +22,6 @@
     "@uirouter/angularjs": "^1.0.23",
     "angular": "^1.7.5",
     "angular-translate": "^2.18.1",
-    "oclazyload": "^1.1.0",
-    "ovh-api-services": "^15.0.0"
+    "oclazyload": "^1.1.0"
   }
 }
