feat(msc-billing-tile): api requests
ref: MANAGER-11620

Signed-off-by: Nicolas BAPTISTA <nicolas.baptista.ext@corp.ovh.com>

--- a/packages/super-components/components/msc-billing-tile/package.json
+++ b/packages/super-components/components/msc-billing-tile/package.json
@@ -24,6 +24,7 @@
     "msc:watch": "stencil build --docs --watch"
   },
   "dependencies": {
+    "@ovh-ux/manager-core-api": "^0.1.0",
     "i18next": "^23.2.10",
     "i18next-http-backend": "^2.2.1"
   },
