--- a/packages/manager/apps/carbon-calculator/package.json
+++ b/packages/manager/apps/carbon-calculator/package.json
@@ -25,6 +25,8 @@
     "@ovh-ux/manager-core": "^12.0.0 || ^13.0.0",
     "@ovh-ux/manager-error-page": "^2.3.1",
     "@ovh-ux/manager-ng-layout-helpers": "^2.6.1",
+    "@ovh-ux/ng-at-internet": "^5.10.2",
+    "@ovh-ux/ng-at-internet-ui-router-plugin": "^3.2.3",
     "@ovh-ux/ng-ovh-api-wrappers": "^5.0.0",
     "@ovh-ux/ng-ovh-feature-flipping": "^1.0.7",
     "@ovh-ux/ng-ovh-http": "^5.0.0",
