--- a/packages/super-components/package.json
+++ b/packages/super-components/package.json
@@ -37,6 +37,7 @@
     "stencil-inline-svg": "^1.1.0",
     "ts-jest": "^26.0.0",
     "typescript": "^5.1.3",
-    "vite": "^4.3.6"
+    "vite": "^4.3.6",
+    "workbox-build": "4.3.1"
   }
 }
