--- a/packages/manager/modules/iam/package.json
+++ b/packages/manager/modules/iam/package.json
@@ -13,6 +13,8 @@
   "main": "src/index.js",
   "peerDependencies": {
     "@ovh-ux/manager-ng-layout-helpers": "^2.6.2",
+    "@ovh-ux/ng-at-internet": "^5.10.2",
+    "@ovh-ux/ng-at-internet-ui-router-plugin": "^3.2.3",
     "@ovh-ux/ng-ovh-feature-flipping": "^1.0.7",
     "@ovh-ux/ng-ovh-utils": "^14.0.19",
     "@ovh-ux/ng-ui-router-breadcrumb": "^1.1.8",
