--- a/packages/manager/modules/iam/package.json
+++ b/packages/manager/modules/iam/package.json
@@ -12,6 +12,7 @@
   "author": "OVH SAS",
   "main": "src/index.js",
   "peerDependencies": {
+    "@ovh-ux/manager-at-internet-configuration": "^1.5.0",
     "@ovh-ux/manager-ng-layout-helpers": "^2.6.2",
     "@ovh-ux/ng-at-internet": "^5.10.2",
     "@ovh-ux/ng-at-internet-ui-router-plugin": "^3.2.3",
