--- a/packages/super-components/package.json
+++ b/packages/super-components/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@babel/core": "^7.22.1",
     "@octokit/core": "^4.2.1",
+    "@ovh-ux/manager-core-api": "^0.1.0",
     "@ovhcloud/ods-core": "^14.0.1",
     "@ovhcloud/ods-stencil": "^14.0.1",
     "@ovhcloud/ods-testing": "^14.0.1",
@@ -28,6 +29,7 @@
     "@types/jest": "^27.0.3",
     "@types/node": "^16.18.11",
     "autoprefixer": "^10.4.14",
+    "axios-mock-adapter": "^1.21.5",
     "jest": "^27.0.3",
     "jest-cli": "^27.0.3",
     "node-sass-package-importer": "^5.3.2",
