--- a/packages/manager/apps/iam/package.json
+++ b/packages/manager/apps/iam/package.json
@@ -31,6 +31,7 @@
     "@ovh-ux/ng-ovh-request-tagger": "^1.1.0",
     "@ovh-ux/ng-ovh-sso-auth": "^4.6.2",
     "@ovh-ux/ng-ovh-utils": "^14.0.19",
+    "@ovh-ux/ng-shell-tracking": "^0.2.2",
     "@ovh-ux/ng-ui-router-breadcrumb": "^1.1.8",
     "@ovh-ux/request-tagger": "^0.1.1",
     "@ovh-ux/shell": "^2.0.0",
