--- a/packages/super-components/components/msc-billing-tile/package.json
+++ b/packages/super-components/components/msc-billing-tile/package.json
@@ -24,7 +24,7 @@
     "msc:watch": "stencil build --docs --watch"
   },
   "dependencies": {
-    "@ovh-ux/manager-core-api": "^0.1.0",
+    "@ovh-ux/manager-core-api": "*",
     "i18next": "^23.2.10",
     "i18next-http-backend": "^2.2.1"
   },
@@ -38,7 +38,8 @@
     "postcss": "^8.4.19",
     "postcss-nested": "^6.0.0",
     "puppeteer": "^10.0.0",
-    "typedoc": "0.22.10"
+    "typedoc": "0.22.10",
+    "typescript": "^4.3.2"
   },
   "peerDependencies": {
     "@ovhcloud/ods-core": "^13.0.1",
