--- a/packages/super-components/components/msc-billing-tile/package.json
+++ b/packages/super-components/components/msc-billing-tile/package.json
@@ -39,7 +39,7 @@
     "postcss-nested": "^6.0.0",
     "puppeteer": "^10.0.0",
     "typedoc": "0.22.10",
-    "typescript": "^4.3.2"
+    "typescript": "~4.3.5"
   },
   "peerDependencies": {
     "@ovhcloud/ods-core": "^13.0.1",
