fix(generator): supercomponeent icons
ref: MANAGER-11441

Signed-off-by: Nicolas BAPTISTA <nicolas.baptista.ext@corp.ovh.com>

--- a/packages/super-components/tsconfig.json
+++ b/packages/super-components/tsconfig.json
@@ -17,7 +17,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "pretty": true,
-    "skipLibCheck": false,
+    "skipLibCheck": true,
     "paths": {
       "@ovhcloud/msc-stencil": ["./packages/super-components/*"]
     },
